...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.519"
                    app:layout_constraintStart_toEndOf="@+id/detImg"
                    app:layout_constraintTop_toBottomOf="@+id/detType"
                    app:layout_constraintVertical_bias="0.107">

                    <TextView
                        android:id="@+id/detRating"
                        style="@style/Text.H1"
                        android:layout_width="wrap_content"
...
                android:id="@+id/detID"
                style="@style/Text.Caption"
                android:textAlignment="center"
                tools:text="123456" />

            <TextView
                android:id="@+id/detDesc"
                style="@style/Text"
                tools:text="LOREM IPSUM DOLOR SIT AMET\nLOREM IPSUM DOLOR SIT AMET\nLOREM IPSUM DOLOR SIT AMET
                \nLOREM IPSUM DOLOR SIT AMET\nLOREM IPSUM DOLOR SIT AMET\nLOREM IPSUM DOLOR SIT AMET
                \nLOREM IPSUM DOLOR SIT AMET\nLOREM IPSUM DOLOR SIT AMET\nLOREM IPSUM DOLOR SIT AMET
                \nLOREM IPSUM DOLOR SIT AMET\nLOREM IPSUM DOLOR SIT AMET\nLOREM IPSUM DOLOR SIT AMET
                \nLOREM IPSUM DOLOR SIT AMET\nLOREM IPSUM DOLOR SIT AMET\nLOREM IPSUM DOLOR SIT AMET
...
