<resources>
    <string name="app_name">MT Catalogue</string>
    <string name="full_app_name">Movie or Tv Show Catalogue</string>
    <string name="mt_image">MT Image</string>
    <string name="rating_rate">Rating Rate</string>
    <string name="share">Share</string>
    <string name="first_air">First Air Date:</string>
    <string name="release_date">Release Date</string>
    <string name="user_rate">%d users</string>
    <string name="movie">Movie</string>
    <string name="movies">Movies</string>
    <string name="tv_show">Tv Show</string>
    <string name="tv_shows">Tv Shows</string>
    <string name="background_poster">Background Poster</string>
    <string name="overview_in_english_only">Overview\n%s\n(in English only)</string>
</resources>